[package]
name = "country-emoji"
edition = "2021"
version = "0.3.0"
description = "Converts between country names, ISO 3166-1 codes and flag emojis."
readme = "README.md"
keywords = ["emoji", "country", "flags", "ISO-3166-1", "BCP-47"]
categories = ["encoding", "gui", "internationalization", "localization"]
authors = ["Leo Dutra <leodutra.br@gmail.com>"]
repository = "https://github.com/leodutra/country-emoji"
license = "MIT"

exclude = ["src/main.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19"
regex = "1.10"
